team webpage stable version

--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
 
         <article class="groupClients">
 
-            <a class="cardClient" href="https://spectrum.fi/">
+            <a class="cardClient" href="https://spectrum.fi/" target="_blank">
                 <img src="./img/ergodex_light.png" alt="spectrum_logo" class="sunMode">
                 <img src="./img/ergodex_dark.png" alt="spectrum_logo" class="darkMode">
             </a>
-            <a class="cardClient" href="https://kyberswap.com/">
+            <a class="cardClient" href="https://kyberswap.com/" target="_blank">
                 <img src="./img/kyberswap_lihgt.png" alt="kyberswap_logo" class="sunMode">
                 <img src="./img/kyberswap_dark.png" alt="kyberswap_logo" class="darkMode">
             </a>
-            <a class="cardClient" href="https://minswap.org/">
+            <a class="cardClient" href="https://minswap.org/" target="_blank">
                 <img src="./img/minswap_light.png" alt="minswap_logo" class="sunMode">
                 <img src="./img/minswap_dark.png" alt="minswap_logo" class="darkMode">
             </a>
@@ -180,7 +180,7 @@
                 
                 <ul>
                     <h4>anetaBTC</h4>
-                    <a href="./team/index.html" target="_blank"><li>Team</li></a>
+                    <a href="./team/index.html"><li>Team</li></a>
                     <a href="https://docs.anetabtc.io/" target="_blank"><li>Docs</li></a>
                     <a href="https://medium.com/@anetaBTC" target="_blank"><li>News & Updates</li></a>
                     <a href="https://docs.anetabtc.io/docs/user-guides/Liso/liso-faq/" target="_blank"><li>FAQ</li></a>
