--- a/team/index.html
+++ b/team/index.html
@@ -42,6 +42,21 @@
         </nav>
     </header>
 
+    <div class="background">
+        <div>
+            <img src="./img/angel_h.png" alt="background" class="sunMode">
+            <img src="./img/angel_hd.png" alt="background" class="darkMode">
+        </div>
+    </div>
+
+    <div class="background cardano">
+        <div>
+            <img src="./img/back_light.png" alt="background" class="sunMode">
+            <img src="./img/back_dark.png" alt="background" class="darkMode">
+        </div>
+    </div>
+
+
     <main>
         <div>
             <h1>Meet Our Team.</h1>
@@ -212,6 +227,12 @@
 
         </div>
     </main>
+
+    <div class="background footer">
+        <div>
+            <img src="./img/angel_f.png" alt="background">
+        </div>
+    </div>
 
     <footer>
         <div class="foot">
