--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <article class="groupClients">
 
             <a class="cardClient" href="https://spectrum.fi/" target="_blank">
-                <img src="./img/ergodex_light.png" alt="spectrum_logo" class="sunMode">
-                <img src="./img/ergodex_dark.png" alt="spectrum_logo" class="darkMode">
+                <img src="./img/spectrum_light.png" alt="spectrum_logo" class="sunMode">
+                <img src="./img/spectrum_dark.png" alt="spectrum_logo" class="darkMode">
             </a>
             <a class="cardClient" href="https://kyberswap.com/" target="_blank">
                 <img src="./img/kyberswap_lihgt.png" alt="kyberswap_logo" class="sunMode">
