--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                 <img src="./img/minswap_light.png" alt="minswap_logo" class="sunMode">
                 <img src="./img/minswap_dark.png" alt="minswap_logo" class="darkMode">
             </a>
+            <a class="cardClient" href="https://www.ergopad.io/" target="_blank">
+                <img src="./img/ergopad_light.png" alt="ergopad_logo" class="sunMode">
+                <img src="./img/ergopad_dark.png" alt="ergopad_logo" class="darkMode">
+            </a>
+            <a class="cardClient" href="https://www.getblok.io/" target="_blank">
+                <img src="./img/getblok_light.png" alt="getblok_logo" class="sunMode">
+                <img src="./img/getblok_dark.png" alt="getblok_logo" class="darkMode">
+            </a>
         </article>
     </section>
     
