modify class btn

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1>Fully On-chain Bitcoin on Ergo and Cardano.</h1>
                     <div class="buttons">
                         <a href="#" target="_blank"><button class="button">Stake now</button></a>
-                        <a href="#" target="_blank"><button class="button btn">Recent News</button></a>
+                        <a href="#" target="_blank"><button class="button btn2">Recent News</button></a>
                     </div>
                 </div>
             </article>
