card team ultra wide

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <h2>Decentralized,<br>On Chain Wrapped  Bitcoin</h2>
                     <h1>Fully On-chain Bitcoin on Ergo and Cardano.</h1>
                     <div class="buttons">
-                        <a href="#" target="_blank"><button class="button">Stake now</button></a>
-                        <a href="#" target="_blank"><button class="button btn">Recent News</button></a>
+                        <a href="https://nstaketesting.ergohost.io/" target="_blank"><button class="button">Stake now</button></a>
+                        <a href="https://medium.com/@anetaBTC" target="_blank"><button class="button btn">Recent News</button></a>
                     </div>
                 </div>
             </article>
