--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/dark.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+
     <title>Home | anetaBTC</title>
     <link rel="icon" type="image/png" href="./img/icon_aneta.png">
 </head>
@@ -49,11 +48,11 @@
                     <h1>Fully On-chain Bitcoin on Ergo and Cardano.</h1>
                     <div class="buttons">
                         <a href="https://nstaketesting.ergohost.io/" target="_blank"><button class="button">Stake now</button></a>
-                        <a href="https://medium.com/@anetaBTC" target="_blank"><button class="button btn">Recent News</button></a>
+                        <a href="https://medium.com/@anetaBTC" target="_blank"><button class="button button2">Recent News</button></a>
                     </div>
                 </div>
             </article>
-            <article class="articleRight hidden">
+            <article class="articleRight">
                 <img src="./img/angel.png" alt="blue_umbrella">
             </article>
         </main>
@@ -129,7 +128,7 @@
         </article>
     </section>
     
-    <div class="background back2">
+    <div class="background background2">
         <div>
             <img src="./img/cardano_light.png" alt="background" class="sunMode">
             <img src="./img/cardano_dark.png" alt="background" class="darkMode">
