--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <div class="menu mActive">
                     <ul>
-                        <li><a href=".maintenance.html" target="_blank">Wrapping Testnet</a></li><hr>
+                        <li><a href="./maintenance.html" target="_blank">Wrapping Testnet</a></li><hr>
                         <li><a href="https://nstaketesting.ergohost.io/" target="_blank">Staking Portal</a></li><hr>
                         <li><a href="https://medium.com/@anetaBTC/roadmap-3-0-the-path-to-btc-on-cardano-and-ergo-9fc3bed3e0c2" target="_blank">Roadmap</a></li><hr>
                         <li><a href="https://medium.com/@anetaBTC" target="_blank">News and Updates</a></li><hr>
