--- a/maintenance.html
+++ b/maintenance.html
@@ -21,7 +21,7 @@
         <img src="./maintenance/img/logo_aneta.png" alt="logo_aneta">
         <h1>Under Maintainence</h1>
         <p>anetaBTC will be live on the Ergo Testnet soon</p>
-        <button><a href="#">Latest Dev Update</a></button>
+        <button><a href="https://medium.com/@anetaBTC/development-update-for-september-21st-2022-8a711ffba471">Latest Dev Update</a></button>
     </div>
     
 </body>
