--- a/team.html
+++ b/team.html
@@ -246,7 +246,7 @@
                     <img src="./team/img/aneta_logo_light.png" alt="aneta_logo" class="sunMode">
                     <img src="./team/img/aneta_logo_dark.png" alt="aneta_logo" class="darkMode">
                     </a>
-                    <p>anetaBTC is a decentralized, secure protocol that allows users to unlock the value on their Bitcoin on Ergo and Cardano.</p>
+                    <p>anetaBTC is a decentralized, secure protocol that allows users to unlock the value of their Bitcoin on Ergo and Cardano.</p>
                 </article>
 
                 <nav>
