--- a/team/index.html
+++ b/team/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./team/css/reset.css">
-    <link rel="stylesheet" href="./team/sass/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <title>Team | anetaBTC</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./team/img/aneta_icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./team/img/aneta_icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./team/img/aneta_icon/favicon-16x16.png">
-    <link rel="manifest" href="./team/img/aneta_icon/site.webmanifest">
-    <link rel="mask-icon" href="./team/img/aneta_icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/aneta_icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/aneta_icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/aneta_icon/favicon-16x16.png">
+    <link rel="manifest" href="./img/aneta_icon/site.webmanifest">
+    <link rel="mask-icon" href="./img/aneta_icon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -24,15 +24,15 @@
     <div class="main">
         <header>
             <a href="./index.html">
-                <img src="./team/img/aneta_logo_light.png" alt="logo" class="sunMode">
-                <img src="./team/img/aneta_logo_dark.png" alt="logo" class="darkMode">
+                <img src="./img/aneta_logo_light.png" alt="logo" class="sunMode">
+                <img src="./img/aneta_logo_dark.png" alt="logo" class="darkMode">
             </a>
             <nav>
                 <div class="menu mActive">
                     <ul>
-                        <li><a href="./maintenance.html" target="_blank">Wrapping Testnet</a></li>
+                        <li><a href="../under-maintenance/index.html" target="_blank">Wrapping Testnet</a></li>
                         <hr>
-                        <li><a href="https://nstaketesting.ergohost.io/" target="_blank">Staking Portal</a></li>
+                        <li><a href="https://stake.anetabtc.io" target="_blank">Staking Portal</a></li>
                         <hr>
                         <li><a href="https://medium.com/@anetaBTC/roadmap-3-0-the-path-to-btc-on-cardano-and-ergo-9fc3bed3e0c2"
                                 target="_blank">Roadmap</a></li>
@@ -47,27 +47,27 @@
                     </ul>
                 </div>
                 <div id="menu">
-                    <i><img src="./team/img/menu_light.png" alt="menu" class="sunMode"></i>
-                    <i><img src="./team/img/menu_dark.png" alt="menu" class="darkMode"></i>
+                    <i><img src="./img/menu_light.png" alt="menu" class="sunMode"></i>
+                    <i><img src="./img/menu_dark.png" alt="menu" class="darkMode"></i>
                 </div>
                 <div id="switch" class="switch">
-                    <i><img src="./team/img/moon_theme.png" alt="sun" class="sunMode"></i>
-                    <i><img src="./team/img/sun_theme.png" alt="moon" class="darkMode"></i>
+                    <i><img src="./img/moon_theme.png" alt="sun" class="sunMode"></i>
+                    <i><img src="./img/sun_theme.png" alt="moon" class="darkMode"></i>
                 </div>
             </nav>
         </header>
     </div>
     <div class="background">
         <div>
-            <img src="./team/img/angel_h.png" alt="background" class="sunMode">
-            <img src="./team/img/angel_hd.png" alt="background" class="darkMode">
+            <img src="./img/angel_h.png" alt="background" class="sunMode">
+            <img src="./img/angel_hd.png" alt="background" class="darkMode">
         </div>
     </div>
 
     <div class="background cardano">
         <div>
-            <img src="./team/img/back_light.png" alt="background" class="sunMode">
-            <img src="./team/img/back_dark.png" alt="background" class="darkMode">
+            <img src="./img/back_light.png" alt="background" class="sunMode">
+            <img src="./img/back_dark.png" alt="background" class="darkMode">
         </div>
     </div>
 
@@ -80,14 +80,14 @@
             <div class="card">
                 <div class="icon_card">
                     <a href="https://www.linkedin.com/in/austin-negron-7995b1172/" target="_blank"><img
-                            src="./team/img/icon_lk.png" alt="linkedin"></a>
+                            src="./img/icon_lk.png" alt="linkedin"></a>
                 </div>
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_austin.png" alt="photo">
+                        <img src="./img/photo_austin.png" alt="photo">
                     </div>
                     <h4>Austin Negron</h4>
-                    <h3>CEO</h3>
+                    <h3>Project Lead</h3>
                     <div class="description">
                         <p>Computer Engineering</p>
                         <p>Boston University</p>
@@ -97,12 +97,12 @@
 
             <div class="card">
                 <div class="icon_card">
-                    <a href="https://www.linkedin.com/in/manglayev/" target="_blank"><img src="./team/img/icon_lk.png"
+                    <a href="https://www.linkedin.com/in/manglayev/" target="_blank"><img src="./img/icon_lk.png"
                             alt="linkedin"></a>
                 </div>
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_talgat.png" alt="photo">
+                        <img src="./img/photo_talgat.png" alt="photo">
                     </div>
                     <h4>Talgat Manglayev</h4>
                     <h3>Lead Engineer</h3>
@@ -114,12 +114,12 @@
 
             <div class="card">
                 <div class="icon_card">
-                    <a href="https://www.linkedin.com/in/wbm3/" target="_blank"><img src="./team/img/icon_lk.png"
+                    <a href="https://www.linkedin.com/in/wbm3/" target="_blank"><img src="./img/icon_lk.png"
                             alt="linkedin"></a>
                 </div>
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_willie.png" alt="photo">
+                        <img src="./img/photo_willie.png" alt="photo">
                     </div>
                     <h4>Willie Mclinton</h4>
                     <h3>Lead Researcher</h3>
@@ -130,27 +130,10 @@
             </div>
 
             <div class="card">
-                <div class="icon_card">
-                    <a href="https://www.linkedin.com/in/marguerite-blair/" target="_blank"><img
-                            src="./team/img/icon_lk.png" alt="linkedin"></a>
-                </div>
-                <div class="main_card">
-                    <div class="img">
-                        <img src="./team/img/photo_margy.png" alt="photo">
-                    </div>
-                    <h4>Marguerite Blair</h4>
-                    <h3>Security Software</h3>
-                    <div class="description">
-                        <p>Security and Software Engineer Citizens Bank</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
 
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_robert.png" alt="photo">
+                        <img src="./img/photo_robert.png" alt="photo">
                     </div>
                     <h4>Robert Ohr</h4>
                     <h3>Chairman</h3>
@@ -164,35 +147,7 @@
 
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_aibek.png" alt="photo">
-                    </div>
-                    <h4>Aibek Tleuliyev</h4>
-                    <h3>Lead Security Engineer</h3>
-                    <div class="description">
-                        <p>Moscow Aviation Institute Lead Engineer, Dept. of Ballistics</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-
-                <div class="main_card">
-                    <div class="img">
-                        <img src="./team/img/photo_dair.png" alt="photo">
-                    </div>
-                    <h4>Dair Alayev</h4>
-                    <h3>Back-end Developer</h3>
-                    <div class="description">
-                        <p>Astanta IT University Software Engineering</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-
-                <div class="main_card">
-                    <div class="img">
-                        <img src="./team/img/photo_max.png" alt="photo">
+                        <img src="./img/photo_max.png" alt="photo">
                     </div>
                     <h4>Max Ward</h4>
                     <h3>UI/UX</h3>
@@ -206,7 +161,7 @@
 
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_hayato.png" alt="photo">
+                        <img src="./img/photo_hayato.png" alt="photo">
                     </div>
                     <h4>Hayato Gin Kawai</h4>
                     <h3>Graphic Design</h3>
@@ -220,7 +175,7 @@
 
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_nathan.png" alt="photo">
+                        <img src="./img/photo_nathan.png" alt="photo">
                     </div>
                     <h4>Nathan Baskin</h4>
                     <h3>KYC/AML</h3>
@@ -234,12 +189,120 @@
 
                 <div class="main_card">
                     <div class="img">
-                        <img src="./team/img/photo_gigi.png" alt="photo">
+                        <img src="./img/photo_gigi.png" alt="photo">
                     </div>
                     <h4>Georgina Alcala</h4>
                     <h3>Business Developer</h3>
                     <div class="description">
                         <p>Boston University</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_qx.png" alt="photo">
+                    </div>
+                    <h4>qx()</h4>
+                    <h3>Software Engineer</h3>
+                    <div class="description">
+                        <p>Cornell University</p>
+                        <p>Director of AAP IT</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_giblits.png" alt="photo">
+                    </div>
+                    <h4>giblits</h4>
+                    <h3>Community Manager</h3>
+                    <div class="description">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_diego.png" alt="photo">
+                    </div>
+                    <h4>DiΣgom₳c</h4>
+                    <h3>Business Development</h3>
+                    <div class="description">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_boris.png" alt="photo">
+                    </div>
+                    <h4>Boris Polujin</h4>
+                    <h3>DevOps/Infrastructure</h3>
+                    <div class="description">
+                        <p>[PSB] Psilobyte</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_elio.png" alt="photo">
+                    </div>
+                    <h4>Elio Esis</h4>
+                    <h3>Front End Developer</h3>
+                    <div class="description">
+                        <p>Shito</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_meta.png" alt="photo">
+                    </div>
+                    <h4>Meta</h4>
+                    <h3>Lead Security Engineer</h3>
+                    <div class="description">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_fire.png" alt="photo">
+                    </div>
+                    <h4>Fire Ferret</h4>
+                    <h3>Lead Front End Developer</h3>
+                    <div class="description">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_skylone.png" alt="photo">
+                    </div>
+                    <h4>Skylone Alv</h4>
+                    <h3>Community Manager</h3>
+                    <div class="description">
                     </div>
                 </div>
             </div>
@@ -250,7 +313,7 @@
 
     <div class="background footer">
         <div>
-            <img src="./team/img/angel_f.png" alt="background">
+            <img src="./img/angel_f.png" alt="background">
         </div>
     </div>
 
@@ -259,8 +322,8 @@
             <div class="foot">
                 <article class="logoFooter">
                     <a href="./index.html">
-                        <img src="./team/img/aneta_logo_light.png" alt="aneta_logo" class="sunMode">
-                        <img src="./team/img/aneta_logo_dark.png" alt="aneta_logo" class="darkMode">
+                        <img src="./img/aneta_logo_light.png" alt="aneta_logo" class="sunMode">
+                        <img src="./img/aneta_logo_dark.png" alt="aneta_logo" class="darkMode">
                     </a>
                     <p>anetaBTC is a decentralized, secure protocol that allows users to unlock the value of their
                         Bitcoin on Ergo and Cardano.</p>
@@ -309,23 +372,23 @@
             <section>
                 <div class="icons">
                     <i><a href="https://twitter.com/anetaBTC">
-                            <img src="./team/img/twitter_foot_l.png" alt="twitter" class="sunMode">
-                            <img src="./team/img/twitter_foot_d.png" alt="twitter" class="darkMode">
+                            <img src="./img/twitter_foot_l.png" alt="twitter" class="sunMode">
+                            <img src="./img/twitter_foot_d.png" alt="twitter" class="darkMode">
                         </a>
                     </i>
                     <i><a href="https://t.me/anetabtc">
-                            <img src="./team/img/telegram_foot_l.png" alt="telegram" class="sunMode">
-                            <img src="./team/img/telegram_foot_d.png" alt="telegram" class="darkMode">
+                            <img src="./img/telegram_foot_l.png" alt="telegram" class="sunMode">
+                            <img src="./img/telegram_foot_d.png" alt="telegram" class="darkMode">
                         </a>
                     </i>
                     <i><a href="https://discord.gg/agRnHsZqhJ">
-                            <img src="./team/img/discord_foot_l.png" alt="discord" class="sunMode">
-                            <img src="./team/img/discord_foot_d.png" alt="discord" class="darkMode">
+                            <img src="./img/discord_foot_l.png" alt="discord" class="sunMode">
+                            <img src="./img/discord_foot_d.png" alt="discord" class="darkMode">
                         </a>
                     </i>
                     <i><a href="https://medium.com/@anetaBTC">
-                            <img src="./team/img/medium_foot_l.png" alt="medium" class="sunMode">
-                            <img src="./team/img/medium_foot_d.png" alt="medium" class="darkMode">
+                            <img src="./img/medium_foot_l.png" alt="medium" class="sunMode">
+                            <img src="./img/medium_foot_d.png" alt="medium" class="darkMode">
                         </a>
                     </i>
                 </div>
@@ -340,7 +403,7 @@
     </footer>
 
 
-    <script src="./team/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
