--- a/under-maintenance/index.html
+++ b/under-maintenance/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./maintenance/css/reset.css">
-    <link rel="stylesheet" href="./maintenance/sass/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <title>Wrapping Testnet | anetaBTC</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./maintenance/img/aneta_icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./maintenance/img/aneta_icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./maintenance/img/aneta_icon/favicon-16x16.png">
-    <link rel="manifest" href="./maintenance/img/aneta_icon/site.webmanifest">
-    <link rel="mask-icon" href="./maintenance/img/aneta_icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/aneta_icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/aneta_icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/aneta_icon/favicon-16x16.png">
+    <link rel="manifest" href="./img/aneta_icon/site.webmanifest">
+    <link rel="mask-icon" href="./img/aneta_icon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <div>
-        <img src="./maintenance/img/logo_aneta.png" alt="logo_aneta">
+        <img src="./img/logo_aneta.png" alt="logo_aneta">
         <h1>Under Maintainence</h1>
         <p>anetaBTC will be live on the Ergo Testnet soon</p>
         <button><a href="https://medium.com/@anetaBTC/development-update-for-september-21st-2022-8a711ffba471">Latest
