--- a/team/index.html
+++ b/team/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="main">
         <header>
-            <a href="./index.html">
+            <a href="../index.html">
                 <img src="./img/aneta_logo_light.png" alt="logo" class="sunMode">
                 <img src="./img/aneta_logo_dark.png" alt="logo" class="darkMode">
             </a>
@@ -321,7 +321,7 @@
         <div class="footer">
             <div class="foot">
                 <article class="logoFooter">
-                    <a href="./index.html">
+                    <a href="../index.html">
                         <img src="./img/aneta_logo_light.png" alt="aneta_logo" class="sunMode">
                         <img src="./img/aneta_logo_dark.png" alt="aneta_logo" class="darkMode">
                     </a>
