--- a/team/index.html
+++ b/team/index.html
@@ -275,7 +275,7 @@
                         <img src="./img/photo_meta.png" alt="photo">
                     </div>
                     <h4>Meta</h4>
-                    <h3>Lead Security Engineer</h3>
+                    <h3>Business Development</h3>
                     <div class="description">
                     </div>
                 </div>
