--- a/team/index.html
+++ b/team/index.html
@@ -191,7 +191,7 @@
                     <div class="img">
                         <img src="./img/photo_gigi.png" alt="photo">
                     </div>
-                    <h4>Georgina Alcala</h4>
+                    <h4>Georgina Alcaraz</h4>
                     <h3>Personal Relations</h3>
                     <div class="description">
                         <p>Boston University</p>
@@ -263,7 +263,6 @@
                     <h4>Elio Esis</h4>
                     <h3>Front End Developer</h3>
                     <div class="description">
-                        <p>Shito</p>
                     </div>
                 </div>
             </div>
