--- a/team/index.html
+++ b/team/index.html
@@ -192,7 +192,7 @@
                         <img src="./img/photo_gigi.png" alt="photo">
                     </div>
                     <h4>Georgina Alcaraz</h4>
-                    <h3>Personal Relations</h3>
+                    <h3>Business Development</h3>
                     <div class="description">
                         <p>Boston University</p>
                     </div>
