--- a/team/index.html
+++ b/team/index.html
@@ -233,7 +233,7 @@
                     <div class="img">
                         <img src="./img/photo_diego.png" alt="photo">
                     </div>
-                    <h4>DiΣgom₳c</h4>
+                    <h4>Diego Macchi</h4>
                     <h3>Business Development</h3>
                     <div class="description">
                     </div>
