--- a/team/index.html
+++ b/team/index.html
@@ -161,6 +161,62 @@
 
                 <div class="main_card">
                     <div class="img">
+                        <img src="./img/photo_darkhan.png" alt="photo">
+                    </div>
+                    <h4>Darkhan Baibulat</h4>
+                    <h3>Front End Developer</h3>
+                    <div class="description">
+                        <p>Astana IT University</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_olzhas.png" alt="photo">
+                    </div>
+                    <h4>Olzhas Abdykalykov</h4>
+                    <h3>Back End Developer</h3>
+                    <div class="description">
+                        <p>Astana IT University</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_kalbek.png" alt="photo">
+                    </div>
+                    <h4>Kalbek Saduakassov</h4>
+                    <h3>Back End Developer</h3>
+                    <div class="description">
+                        <p>Astana IT University</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
+                        <img src="./img/photo_aisha.png" alt="photo">
+                    </div>
+                    <h4>Aisha Kozhamseitova</h4>
+                    <h3>Mobile Developer</h3>
+                    <div class="description">
+                        <p>Astana IT University</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+
+                <div class="main_card">
+                    <div class="img">
                         <img src="./img/photo_hayato.png" alt="photo">
                     </div>
                     <h4>Hayato Gin Kawai</h4>
