--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav>
 				<div class="menu mActive">
 					<ul>
-						<li><a href="./under-maintenance/index.html" target="_blank">Wrapping Testnet</a></li>
+						<li><a href="./under-maintenance/" target="_blank">Wrapping Testnet</a></li>
 						<hr>
 						<li><a href="https://stake.anetabtc.io" target="_blank">Staking Portal</a></li>
 						<hr>
@@ -205,7 +205,7 @@
 
 					<ul>
 						<h4>anetaBTC</h4>
-						<a href="./team/index.html">
+						<a href="./team/">
 							<li>Team</li>
 						</a>
 						<a href="https://docs.anetabtc.io/" target="_blank">
