--- a/team/index.html
+++ b/team/index.html
@@ -23,14 +23,14 @@
 <body>
     <div class="main">
         <header>
-            <a href="../index.html">
+            <a href="../">
                 <img src="./img/aneta_logo_light.png" alt="logo" class="sunMode">
                 <img src="./img/aneta_logo_dark.png" alt="logo" class="darkMode">
             </a>
             <nav>
                 <div class="menu mActive">
                     <ul>
-                        <li><a href="../under-maintenance/index.html" target="_blank">Wrapping Testnet</a></li>
+                        <li><a href="../under-maintenance/" target="_blank">Wrapping Testnet</a></li>
                         <hr>
                         <li><a href="https://stake.anetabtc.io" target="_blank">Staking Portal</a></li>
                         <hr>
@@ -376,7 +376,7 @@
         <div class="footer">
             <div class="foot">
                 <article class="logoFooter">
-                    <a href="../index.html">
+                    <a href="../">
                         <img src="./img/aneta_logo_light.png" alt="aneta_logo" class="sunMode">
                         <img src="./img/aneta_logo_dark.png" alt="aneta_logo" class="darkMode">
                     </a>
