--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<ul>
 						<li><a href="./under-maintenance/" target="_blank">Wrapping Testnet</a></li>
 						<hr>
-						<li><a href="https://stake.anetabtc.io" target="_blank">Staking Portal</a></li>
+						<li><a href="https://stake.anetabtc.io/" target="_blank">Staking Portal</a></li>
 						<hr>
 						<li><a href="https://medium.com/@anetaBTC/roadmap-3-0-the-path-to-btc-on-cardano-and-ergo-9fc3bed3e0c2"
 								target="_blank">Roadmap</a></li>
@@ -61,7 +61,7 @@
 					<h2>Decentralized,<br>On Chain Wrapped Bitcoin</h2>
 					<h1>Fully On-chain Bitcoin on Ergo and Cardano.</h1>
 					<div class="buttons">
-						<a href="https://stake.anetabtc.io" target="_blank"><button class="button">Stake
+						<a href="https://stake.anetabtc.io/" target="_blank"><button class="button">Stake
 								now</button></a>
 						<a href="https://medium.com/@anetaBTC" target="_blank"><button class="button button2">Recent
 								News</button></a>
