--- a/team/index.html
+++ b/team/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./sass/style.css">
     <title>Team | anetaBTC</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/aneta_icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/aneta_icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/aneta_icon/favicon-16x16.png">
-    <link rel="manifest" href="./img/aneta_icon/site.webmanifest">
-    <link rel="mask-icon" href="./img/aneta_icon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="theme-color" content="#ffffff">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9BD9F2">
+	<meta name="msapplication-TileColor" content="#9bd9f2">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -413,6 +414,11 @@
                         <a href="https://medium.com/@anetaBTC/roadmap-3-0-the-path-to-btc-on-cardano-and-ergo-9fc3bed3e0c2"
                             target="_blank">
                             <li>Roadmap</li>
+                        </a>
+                        </a>
+                        <a href="https://datastudio.google.com/u/0/reporting/4cb333f9-39bf-448b-8d2d-f7ac3f44ad5d/page/p_0h6vsjfnsc"
+                        target="_blank">
+                        <li>Neta Liquidity Fund</li>
                         </a>
                     </ul>
                     <ul>
