--- a/team/index.html
+++ b/team/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./sass/style.css">
     <title>Team | anetaBTC</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="shortcut icon" href="/favicon.ico">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9BD9F2">
+	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+	<link rel="shortcut icon" href="./favicon.ico">
+	<link rel="manifest" href="./site.webmanifest">
+	<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#9BD9F2">
 	<meta name="msapplication-TileColor" content="#9bd9f2">
 	<meta name="theme-color" content="#ffffff">
 </head>
