--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           "@context": "https://schema.org",
           "@type": "Organization",
           "url": "https://anetabtc.io",
-          "logo": "https://anetabtc.io/img/angel.png"
+          "logo": "https://anetabtc.io/img/icon_aneta.png"
         }
     </script>
 </head>
@@ -139,8 +139,8 @@
 				<img src="./img/kyberswap_dark.png" alt="kyberswap_logo" class="darkMode">
 			</a>
 			<a class="cardClient" href="https://minswap.org/" target="_blank">
-				<img src="./img/minswap_light.png" alt="minswap_logo" class="sunMode">
-				<img src="./img/minswap_dark.png" alt="minswap_logo" class="darkMode">
+				<img src="./img/min_light.png" alt="minswap_logo" class="sunMode">
+				<img src="./img/min_dark.png" alt="minswap_logo" class="darkMode">
 			</a>
 			<a class="cardClient" href="https://www.ergopad.io/" target="_blank">
 				<img src="./img/ergopad_light.png" alt="ergopad_logo" class="sunMode">
