--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
 				<img src="./img/getblok_light.png" alt="getblok_logo" class="sunMode">
 				<img src="./img/getblok_dark.png" alt="getblok_logo" class="darkMode">
 			</a>
+			<a class="cardClient" href="https://saturnlabs.org" target="_blank">
+				<img src="./img/saturn_light.png" alt="saturn_logo" class="sunMode">
+				<img src="./img/saturn_dark.png" alt="saturn_logo" class="darkMode">
+			</a>
 		</article>
 	</section>
 
