--- a/vote/index.html
+++ b/vote/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
 		integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./sass/styles.css">
-    <title>Governance | anetaBTC</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./sass/styles.css">
+	<title>Governance | anetaBTC</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
 	<link rel="shortcut icon" href="./favicon.ico">
@@ -19,100 +20,148 @@
 	<meta name="msapplication-TileColor" content="#9bd9f2">
 	<meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
-    <header>
-        <nav><img src="./img/logo.png" alt="logo"></nav>
-    </header>
-    <main>
-        <div class="title">
-            <h1>Treasury Governance Vote</h1>
-        </div>
-        <div>
-            <h2>Directions:</h2>
-            <p>Send your cVOTE2/eVOTE2 tokens to the wallet you would like to vote for. At the end of the 48-hour voting period, the option with the most votes will be the outcome of the governance event.</p>
-        </div>
-    </main>
-    <section>
-        <div class="group__cards">
-            <div class="cards">
-                <header>
-                    <h2>Option 1</h2>
-                    <p>Distribute a portion of the treasury to the project:</p>
-                    <p>280k ADA, 55k ERG, and 700k MIN for 12 months of development. If voted on, fund will be replenished with 30 million cNETA and 30 million NETA.</p>
-                </header>
-                <article>
-                    <div class="subtitle">
-                        <i><img src="./img/icon_cardano.png" alt="icon_cardano"></i>
-                        <h3>CARDANO</h3>
-                    </div>
-                    <h4>Option 1 Cardano Wallet — <span>send cVOTE2 here to vote option 1</span></h4>
-                    
-                <div class="direction">
-                    <p>addr1q80md4t6xacfxzvm5ak903gmmed0he3d0k3x4ylxwcvy3qs5jtjeq8d8xnq59jx4c9yrt9xr6xsn0srmdy2ghgtth72qsat083</p>
-                    <i><img src="./img/copy.png" alt="icon_copy"></i>
-                    <div id="copy">Copied</div>
-                    </div>
-                    <div class="vote">
-                        <h4>Current Votes: <p class="votes" id="cardano1"><span class="loader"></span></p></h4>
-                    </div>
-                </article>
-                <article>
-                    <div class="subtitle">
-                        <i><img src="./img/icon_ergo.png" alt="icon_ergo"></i>
-                        <h3>ERGO</h3>
-                    </div>
-                    <h4>Option 1 Ergo Wallet — <span>send eVOTE2 here to vote option 1</span></h4>
-                    <div class="direction">
-                        <p>9hC3QcUYK1vwNEvpjrPGC4q1egU8ydUCXLC31a58D1dWQ9wLN3o</p>
-                        <i><img src="./img/copy.png" alt="icon_copy"></i>
-                        <div id="copy">Copied</div>
-                    </div>
-                    <div class="vote">
-                        <h4>Current Votes: <p class="votes" id="ergo1"><span class="loader"></span></p></h4>
-                    </div>
-                </article>
-            </div>
+	<header>
+		<nav><img src="./img/logo.png" alt="logo"></nav>
+	</header>
+	<main>
+		<div class="title">
+			<h1>Governance Vote #5</h1>
+		</div>
+		<div>
+			<h2>Directions:</h2>
+			<p>Send your cVOTE5/eVOTE5 tokens to the wallet of the option you would like to vote for. At the end of the 72-hour voting period, the option with the most votes will be the outcome of the governance event.</p>
+		</div>
+	</main>
+	<section>
+		<div class="group__cards">
+			<div class="cards">
+				<header>
+					<h2>Option 1</h2>
+					<p>Convert NETA to cNETA in ADA equivalents and airdrop the 36,000 ERG from Staking V2 directly to NETA holders. </p>
+				</header>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_cardano.png" alt="icon_cardano"></i>
+						<h3>CARDANO</h3>
+					</div>
+					<h4>Option 1 Cardano Wallet (for cVOTE5)</h4>
 
-            <div class="cards">
-                <header>
-                    <h2>Option 2</h2>
-                    <p>Distribute a portion of the treasury to the project:</p>
-                    <p>230k ADA, 30k ERG, and 600k MIN for 8 months of development. If voted on, fund will be replenished with 20 million cNETA and 20 million NETA.</p>
-                </header>
-                <article>
-                    <div class="subtitle">
-                        <i><img src="./img/icon_cardano.png" alt="icon_cardano"></i>
-                        <h3>CARDANO</h3>
-                    </div>
-                    <h4>Option 2 Cardano Wallet — <span>send cVOTE2 here to vote option 2</span></h4>
-                    <div class="direction">
-                        <p>addr1qyngymtfrvzvwrueadytaeufmv0ymqc3feytlfqkr32uvpjml6tmvatgluk5yd7lu04dutqg4rylx9htrxrvsva29r6szjqama</p>
-                        <i><img src="./img/copy.png" alt="icon_copy"></i>
-                        <div id="copy">Copied</div>
-                    </div>
-                    <div class="vote">
-                        <h4>Current Votes: <p class="votes" id="cardano2"><span class="loader"></span></p></h4>
-                    </div>
-                </article>
-                <article>
-                    <div class="subtitle">
-                        <i><img src="./img/icon_ergo.png" alt="icon_ergo"></i>
-                        <h3>ERGO</h3>
-                    </div>
-                    <h4>Option 2 Ergo Wallet — <span>send eVOTE2 here to vote option 2</span></h4>
-                    <div class="direction">
-                        <p>9hSXi4eBfvzNZPazBUe8MRWCKeQjJen7PgjYfsnjkdirWzcQFpC</p>
-                        <i><img src="./img/copy.png" alt="icon_copy"></i>
-                        <div id="copy">Copied</div>
-                    </div>
-                    <div class="vote">
-                        <h4>Current Votes: <p class="votes" id="ergo2"><span class="loader"></span></p></h4>
-                    </div>
-                </article>
-            </div>
-        </div>
-    </section>
+					<div class="direction">
+						<p>addr1qx5c5ydtw2xrmwj6tqj3s4yd9sck5rgcr5d22haa9jq6j2crcz99ppc0fld4m03rhm3s23v3f0nhayjpd5yu6qfu0zvsp64vph</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="cardano1"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_ergo.png" alt="icon_ergo"></i>
+						<h3>ERGO</h3>
+					</div>
+					<h4>Option 1 Ergo Wallet (for eVOTE5)</h4>
+					<div class="direction">
+						<p>9iHhB4BG9QVmrczbiLmN3aQzhDeBGtNHtHuAYBi9EEw5YHksgmc</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="ergo1"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+			</div>
 
-    <script src="./js/main.js"></script>
+			<div class="cards">
+				<header>
+					<h2>Option 2</h2>
+					<p>Convert NETA 1:1 cNETA vested over 2 years and use the 36,000 ERG at a later time.</p>
+				</header>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_cardano.png" alt="icon_cardano"></i>
+						<h3>CARDANO</h3>
+					</div>
+					<h4>Option 2 Cardano Wallet (for cVOTE5)</span></h4>
+					<div class="direction">
+						<p>addr1qysdt8l9unds43hcuvx8e73t05lvs27djktjed8lcj9d4fqx78z7ek4j8v2v9sczcjvw80mh3wmk82ygnlp9xww2gscq38s4jp</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="cardano2"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_ergo.png" alt="icon_ergo"></i>
+						<h3>ERGO</h3>
+					</div>
+					<h4>Option 2 Ergo Wallet (for eVOTE5)</h4>
+					<div class="direction">
+						<p>9g4e3U4Pkr2Fp8TQBccCztVLMZyQJji4DrBEuSJsApwcjbDDHUf</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="ergo2"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+			</div>
+
+
+			<div class="cards">
+				<header>
+					<h2>Option 3</h2>
+					<p>Don’t make any of these changes at this time.</p>
+				</header>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_cardano.png" alt="icon_cardano"></i>
+						<h3>CARDANO</h3>
+					</div>
+					<h4>Option 3 Cardano Wallet (for cVOTE5)</h4>
+
+					<div class="direction">
+						<p>addr1q9m9kljtv2vnjzkmwd3dr5kshrkzqeja2vhj8p0xet8nj497df6w0kpf0hszx70yl6mqk4464d8uk0x5xuy7dgvd5a3skwfvcn</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="cardano3"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+				<article>
+					<div class="subtitle">
+						<i><img src="./img/icon_ergo.png" alt="icon_ergo"></i>
+						<h3>ERGO</h3>
+					</div>
+					<h4>Option 3 Ergo Wallet (for eVOTE5)</h4>
+					<div class="direction">
+						<p>9hrQ9WberwG9SSbXyUhHcDbfbfwK7vVfhGjnCcze1f9fDH4BiyK</p>
+						<i><img src="./img/copy.png" alt="icon_copy"></i>
+						<div id="copy">Copied</div>
+					</div>
+					<div class="vote">
+						<h4>Current Votes: <p class="votes" id="ergo3"><span class="loader"></span></p>
+						</h4>
+					</div>
+				</article>
+			</div>
+
+
+
+		</div>
+	</section>
+
+	<script src="./js/main.js"></script>
 </body>
+
 </html>
